00-scripts/04-network/01-deny-all-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-network-policy
  namespace: mars
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
