00-scripts/04-network/02-label-filter-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: label-filter-network-policy
  namespace: mars
spec:
  podSelector:
    matchLabels:
      run: mars-pod1
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
  egress: 
  - to:
    - podSelector:
        matchLabels:
          run: mars-pod2
    - namespaceSelector:
        matchLabels:
          ns: venus-ns
    - podSelector:
        matchLabels:
          run: pluto-pod2
      namespaceSelector:
        matchLabels:
          ns: pluto-ns
